2010-03-15  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Changed the way the site hash is calculated, requires reindexing
	* Changed document ID generation to provide page IDs to site hash generation

2010-03-12  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug tx_solr_Query::addReturnField does not remove *, credits Timo Schmidt

2010-03-08  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the constructor of tx_solr_SolrService to accept connection parameters instead of always getting them from TSFE
	* Removed the tx_solr_SolrService from tx_solr_Query, was not used
	* Fixed building of query URLs by removing the page parameter, previously that parameter could cause trouble when adding a new filter and being on a page that would not exist when the filter is applied, credits Timo Schmidt

2009-10-16  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug with facet values containing commas

2009-09-18  Ingo Renner  <ingo.renner@dkd.de>

	* Added a Status check for Solr server availability

2009-09-16  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an XSS issue
	* Bumped version to 1.0.1 after release in TER
	* Fixed compatibility with EXT:scheduler v1.0.0

2009-09-15  Ingo Renner  <ingo.renner@dkd.de>

	* Initial Public Release of the community version