@@ -1,3 +1,7 @@
+2010-04-12  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added support for cObjects in additional field definitions
+
 2010-03-15  Ingo Renner  <ingo.renner@dkd.de>
 
 	* !!! Changed the way the site hash is calculated, requires reindexing
